# src/routes/calendarRoutes.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { createCalendarEvent, checkCalendarAvailability, listCalendarEvents, deleteCalendarEvent } from '../controllers/calendarController';
+import { createCalendarEvent, checkCalendarAvailability, listCalendarEvents, deleteCalendarEvent, search } from '../controllers/calendarController';
 import { authenticateToken } from '../middlewares/authMiddleware';
 
 const router = Router();
@@ -10,4 +10,6 @@ router.post('/create', createCalendarEvent);
 router.post('/check', checkCalendarAvailability);
 router.post('/list', listCalendarEvents);
 router.post('/delete', deleteCalendarEvent);
+router.get('/search', search);
+
 export default router;
